--- a/web/templates/web/bulma_index.html
+++ b/web/templates/web/bulma_index.html
@@ -112,7 +112,11 @@
             Analytics Dashboard
         </h1>
         <p class="subtitle">
+            {% if user.first_name and user.last_name %}
+            Welcome back <strong>{{ user.first_name }} {{ user.last_name }}</strong>!
+            {% else %}
             Welcome back <strong>{{ user }}</strong>!
+            {% endif %}
         </p>
         {% for row in bokehdiv %}
         <div class="columns">
