--- a/web/templates/web/bootstrap_login.html
+++ b/web/templates/web/bootstrap_login.html
@@ -75,9 +75,7 @@
     <form class="form-signin" action="{% url 'web:login' %}" method="POST">
         {% csrf_token %}
 
-        <img class="mb-4" src="{% static 'web/assets/img/logo.svg' %}" alt="" width="100" height="100">
-
-        <h1 class="h3 mb-3 font-weight-normal">Shine Analytics</h1>
+        <img class="mb-1" src="{% static 'web/assets/img/logo_vertical.svg' %}" alt="" width="250" height="250">
 
         <label class="sr-only" for="{{ form.username.id_for_label }}">{{ form.username.label }}</label>
         <input class="form-control" name="{{ form.username.html_name }}" type="text" placeholder="Username" required
