--- a/web/templates/web/bulma_index.html
+++ b/web/templates/web/bulma_index.html
@@ -46,7 +46,7 @@
     <div class="container">
         <div class="navbar-brand">
             <a class="navbar-item" href="{% url 'web:index' %}">
-                <img src="{% static 'web/assets/img/logo.svg' %}" width="30" height="30">
+                <img src="{% static 'web/assets/img/logo_horizontal.svg' %}" height="30">
             </a>
 
             <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
